source/stylesheets/_base.scss
/* ... */
.languages {
  position: absolute;
  top: -40px;
  background: rgba(255, 255, 255, 0.95);
  width: 100%;
  right: 0;
  text-align: right;
  padding: 10px 0;
  border-bottom: 1px solid #eee;
}

.languages a.lang-pn,
.languages a.lang-hi,
.languages a.lang-zh {
  font-size: 115%;
}

.languages a,
.languages span {
  padding-right: 15px;
}

.contents.en a.lang-en,
.contents.pn a.lang-pn,
.contents.hi a.lang-hi,
.contents.zh a.lang-zh {
  color: #999;
}

.free {
  column-count: 3;
}

.free p {
  text-align: center;
  padding-top: 90px;
  font-size: 80%;
  line-height: 1.3;
  position: relative;
}

.free p:after {
  color: rgba(0, 0, 0, 0);
  content: ".";
  width: 60px;
  height: 60px;
  position: absolute;
  top: 20px;
  left: 50%;
  margin-left: -30px;
}

.free p.free-forever:after {
  background: url(/images/icon-forever.png) 50% 50% no-repeat;
  background-size: 60px;
}

.free p.free-code:after {
  background: url(/images/icon-code.png) 50% 50% no-repeat;
  background-size: 60px;
}

.free p.free-yes:after {
  background: url(/images/icon-check.png) 50% 50% no-repeat;
  background-size: 60px;
}

.people {
  column-count: 2;
  margin-left: 0;
  padding-left: 0;
}

.people li {
  font-size: 14px;
  line-height: 1.4;
  margin-left: 0;
  list-style: none;
  break-inside: avoid;
  page-break-inside: avoid;
  position: relative;
  padding-left: 42px;
}

.people img {
  height: 32px;
  width: 32px;
  position: absolute;
  left: 0;
  top: 0;
  background: #eee;
  border-radius: 100px;
}

.photo {
  height: 300px;
  margin: 1em 0 3em 0;
  position: relative;
  border: 10px solid #fff;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.caption {
  position: absolute;
  bottom: 0;
  padding: 7px 0 0 0;
  text-align: center;
  margin: 0;
  width: 100%;
  background: #fff;
}

.small {
  font-size: 14px;
}

footer {
  padding: 100px 0 40px 0;
  margin-top: 20px;
  line-height: 2;
}

footer a {
  padding: 5px 20px 5px 0;
  display: inline-block;
}

footer span {
  white-space: nowrap;
}

.features img {
  width: 29%;
  height: auto;
  margin: 7px 1.5%;
  box-shadow: 0 0 0 4px #fff, 2px 2px 12px rgba(0, 0, 0, 0.3);
  box-sizing: content-box;
}

.videoWrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.howitworks {
  clear: both;
  position: relative;
}

.howitworks img {
  width: 140px;
}

.howitworks-left img {
  float: left;
  margin: -20px 20px 20px 0;
}

.howitworks-right img {
  float: right;
  margin: -20px 0 20px 20px;
}

.howitworks h5 {
  margin-top: 2em;
}

.image-float {
  float: right;
  margin: 0 16px 16px 16px;
  display: block;
  text-align: center;
  width: 130px;
  z-index: 1000000;
  position: relative;
}

.image-float img {
  width: 136px;
  border: 5px solid #fff;
  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.15);
  display: block;
  margin: 0 0 16px 0;
}

p.icons {
  position: relative;
  padding-left: 52px;
  line-height: 1.2;
}

p.icons i {
  position: absolute;
  top: 2px;
  left: 0;
  color: #ff3355;
  font-size: 28px;
  width: 32px;
  text-align: center;
}

p.icons strong {
  font-weight: 400;
  font-size: 90%;
}

span.download {
  display: block;
  padding-top: 0.5em;
}

a.button-play {
  padding: 6px 0;
  height: auto;
  font-weight: 300;
  font-size: 18px;
  letter-spacing: 0;
  text-transform: none;
  background: #fff;
  margin: 8px 0 8px 0;

  &.button-appstore {
    background: #000;
    color: #fff;
    border-color: #000;
  }
}

.mobile-screen-wrapper,
.mobile-screen-wrapper:visited,
.dashboard-screen-wrapper,
.dashboard-screen-wrapper:visited {
  display: block;
  float: left;
  width: 274px;
  font-size: 13px;
  margin: 0 32px 42px 0;
  color: rgba(0, 0, 0, 0.6);
  line-height: 1.4;
  position: relative;
}

.dashboard-screen-wrapper,
.dashboard-screen-wrapper:visited,
.dashboard-screen-wrapper img {
  width: auto;
  max-width: 400px;
}

.dashboard-screen-wrapper img,
.dashboard-screen-wrapper:visited img {
  display: block;
  margin-top: 12px;
  margin-bottom: 24px;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
}

.mobile-screen-wrapper i,
.dashboard-screen-wrapper i {
  position: absolute;
  top: 2px;
  left: -4px;
  color: rgba(0, 0, 0, 0.3);
  opacity: 0;
  transition: opacity 0.2s;
}

.mobile-screen-wrapper:hover i,
.dashboard-screen-wrapper:hover i {
  opacity: 1;
}

.mobile-screen-wrapper strong,
.dashboard-screen-wrapper strong {
  font-weight: bold;
  display: block;
  padding-left: 14px;
}

.mobile-screen-wrapper .desc,
.dashboard-screen-wrapper .desc {
  display: block;
  min-height: 10em;
  padding-left: 14px;
}

.mobile-screen {
  background-size: 252px auto;
  background-repeat: no-repeat;
  background-position: 50% 24px;
  display: block;
}

.mobile-screen-overlay {
  background-image: url(/images/mobile.png);
  width: 274px;
  height: 510px;
  background-size: 274px auto;
  display: block;
}

.videowrapper {
  position: relative;
  padding-bottom: 56.25%; /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.videowrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.product-image {
  border-radius: 400px;
  background: #e6fff0;
  box-shadow: 0 0 25px #e6fff0;
  float: right;
  width: 140px;
  height: 140px;
  margin: -24px 0 32px 32px;
  position: relative;
  transition: background 0.3s ease-in-out;

  img {
    position: absolute;
    top: -12px;
    left: 20px;
    height: 180px;
  }

  &:hover {
    background: #0075eb;
  }
}
/* ... */

